--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="backgroundGame">#fbf8ef</color>
     <color name="mycolor">#97341F</color>
     <color name="gridColor">#bbada0</color>
+    <color name="btnColor">#cdc1b5</color>
 </resources>
