--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -30,6 +30,7 @@
             />
 
         <Button
+            android:id="@+id/game_activity_score"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -41,6 +42,7 @@
             />
 
         <Button
+            android:id="@+id/game_activity_best"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="2"
@@ -82,6 +84,7 @@
         android:layout_height="wrap_content"
         >
         <Button
+            android:id="@+id/game_activity_restart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Restart"
@@ -92,5 +95,176 @@
             android:layout_weight="1"
             />
     </LinearLayout>
-    
+
+    <GridLayout
+        android:id="@+id/activity_game_GridLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="6"
+        android:columnCount="4"
+        android:rowCount="4"
+        android:alignmentMode="alignMargins"
+        android:columnOrderPreserved="true"
+        android:padding="14dp"
+        android:layout_margin="2dp"
+        android:background="@color/gridColor">
+
+        <!-- ROW 1-->
+        <Button
+            android:id="@+id/game_0_0"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:background="@color/btnColor"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:text="2"/>
+        <Button
+            android:id="@+id/game_0_1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+        <Button
+            android:id="@+id/game_0_2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+        <Button
+            android:id="@+id/game_0_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+
+
+        <!-- ROW 2-->
+        <Button
+            android:id="@+id/game_1_0"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+        <Button
+            android:id="@+id/game_1_1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+        <Button
+            android:id="@+id/game_1_2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+        <Button
+            android:id="@+id/game_1_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+
+
+        <!-- ROW 3-->
+        <Button
+            android:id="@+id/game_2_0"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+        <Button
+            android:id="@+id/game_2_1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+        <Button
+            android:id="@+id/game_2_2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+        <Button
+            android:id="@+id/game_2_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+
+
+        <!-- ROW 2-->
+        <Button
+            android:id="@+id/game_3_0"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+        <Button
+            android:id="@+id/game_3_1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+        <Button
+            android:id="@+id/game_3_2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+        <Button
+            android:id="@+id/game_3_3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            android:layout_margin="3dp"
+            android:textSize="30dp"
+            android:background="@color/btnColor"/>
+
+    </GridLayout>
+
 </LinearLayout>
